--- a/style.css
+++ b/style.css
@@ -584,13 +584,29 @@ margin-top: 20px;
         width: 18px;
         height: 18px;
      }
+     .sec31{
+        margin-top: 100px;
+     }
+     .sec32{
+        margin-top: 50px;
+     }
      .section4{
         height: auto;
+     }
+     #project{
+        margin-top: 100px;
      }
      .projects_list{
         height: auto;
         grid-template-columns: 1fr 1fr 1fr;
         grid-template-rows: 1fr;
+        overflow-y: scroll;
+     }
+     .section5{
+        margin-top: 150px;
+     }
+     .form{
+        margin-top: 100px;
      }
      
 }
