--- a/style.css
+++ b/style.css
@@ -584,7 +584,7 @@ margin-top: 20px;
         width: 18px;
         height: 18px;
      }
-     .sec31{
+     /* .sec31{
         margin-top: 100px;
      }
      .sec32{
@@ -599,7 +599,6 @@ margin-top: 20px;
      .projects_list{
         height: auto;
         grid-template-columns: 1fr 1fr 1fr;
-        grid-template-rows: 1fr;
         overflow-y: scroll;
      }
      .section5{
@@ -608,7 +607,7 @@ margin-top: 20px;
      .form{
         margin-top: 100px;
      }
-     
+      */
 }
 @media (max-width:590px) {
     .project{
@@ -933,7 +932,7 @@ margin-top: 20px;
     width: 20px;
     height: 20px;
  }
-@media (max-width:370px) {
+@media (max-width:440px) {
     .section6{
         flex-direction: column;
         align-items: center;
@@ -1156,3 +1155,21 @@ display: none;
         font-size: 15px;
     }
 }
+@media (max-width:940px) {
+    .section1{
+        margin-top: 20px;
+    }
+    .section3{
+        min-height: 500px;
+    }
+    .sec31{
+        margin-top: 50px;
+    }
+    .sec32{
+        margin-top: 100px;
+    }
+    .section4{
+        min-height: 600px;
+    }
+}
+
