--- a/style.css
+++ b/style.css
@@ -1155,21 +1155,21 @@ display: none;
         font-size: 15px;
     }
 }
-@media (max-width:940px) {
+@media (max-width:850px) {
     .section1{
         margin-top: 20px;
     }
     .section3{
         min-height: 500px;
     }
-    .sec31{
-        margin-top: 50px;
-    }
     .sec32{
         margin-top: 100px;
     }
     .section4{
         min-height: 600px;
+    }
+    .form{
+        margin-top: 50px;
     }
 }
 
